--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@
     --color-body: #918ca4;
 }
 
+
+
+
+/* Typography */
+
 html {
     font-size: 62.5%;
 }
@@ -41,10 +46,6 @@ p {
     margin-top: 0;
 }
 
-
-
-
-
 @media screen and (min-width: 1024px) {
     body {
         font-size: 1.8rem;
@@ -61,4 +62,36 @@ p {
     h3 {
         font-size: 2.4rem;
     }
+}
+
+
+
+/* Links */
+a {
+    text-decoration: none;
+}
+
+.link-arrow {
+    color: var(--color-accent);
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after {
+    content: '-->';
+    margin-left: 5px;
+    transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+    margin-left: 10px;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .link-arrow {
+        font-size: 1.5rem;
+    }
+
 }
