--- a/css/style.css
+++ b/css/style.css
@@ -180,8 +180,17 @@ a {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary)
+}
+
+.icon--white {
+    fill: #fff;
 }
 
 .icon-container {
@@ -194,7 +203,9 @@ a {
     align-items: center;
 }
 
-
+.icon-container-accent {
+    background: var(--color-accent);
+}
 
 
 /* Buttons */
@@ -450,7 +461,7 @@ a {
         font-size: 2rem;
     }
 
-    .quote__authoer {
+    .quote__author {
         font-size: 2.4rem;
     }
 
@@ -476,5 +487,40 @@ a {
 @media screen and (min-width: 1024px) {
     .grid--1x3 {
         grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+
+
+/* Testimonials */
+.testimonial {
+    padding: 3rem;
+}
+
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
