--- a/components/card.html
+++ b/components/card.html
@@ -4,3 +4,17 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, et?
     </div>
   </div>
+
+
+
+
+
+
+  <div style="width: 30%; padding: 4rem">
+    <div class="card card--primary">
+      <header class="card__header">Card Title</header>
+      <div class="card__body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, et?
+      </div>
+    </div>
+  </div>
