--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,9 @@ a {
 
 
 /* Plans */
+.plan {
+    transition: transform .2s ease-out;
+}
 .plan__name {
     color: #fff;
     margin: 0;
@@ -383,8 +386,16 @@ a {
     margin-bottom: 2rem;
 }
 
+.card--primary .badge--primary {
+    background: #126de4;
+}
+
 .card--secondary .badge--secondary {
     background: #02cdf1;
+}
+
+.plan--popular {
+    transform: scale(1.1);
 }
 
 .plan--popular .card__header {
@@ -398,6 +409,14 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -790,4 +809,17 @@ a {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+}
+
+
+
+
+/* Plans Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
